CHANGES
*******

0.7 (unreleased)
================

- Minor improvement in docstrings.


0.6 (2014-09-08)
================

- Fix documentation on the ``with`` statement; it was not using the local
  ``view`` variable correctly.

- Add #morepath IRC channel to the community docs.

- Named mounts. Instead of referring to the app class when
  constructing a link to an object in an application mounted
  elsewhere, you can put in the name of the mount. The name of the
  mount can be given explicitly in the mount directive but defaults to
  the mount path.

  This helps when an application is mounted several times and needs to
  generate different links depending on where it's mounted; by
  referring to the application by name this is loosely coupled and
  will work no matter what application is mounted under that name.

  This also helps when linking to an application that may or may not
  be present; instead of doing an import while looking for
  ``ImportError``, you can try to construct the link and you'll get a
  ``LinkError`` exception if the application is not there. Though this
  still assumes you can import the model class of what you're linking
  to.

  (see issue #197)

- Introduce a ``sibling`` method on Request. This combines the
  ``.parent.child`` step in one for convenience when you want to
  link to a sibling app.

0.5.1 (2014-08-28)
==================

- Drop usage of sphinxcontrib.youtube in favor of raw HTML embedding,
  as otherwise too many things broke on readthedocs.

0.5 (2014-08-28)
================

- Add ``more.static`` documentation on local components.

- Add links to youtube videos on Morepath: the keynote at PyCon DE
  2013, and the talk on Morepath at EuroPython 2014.

- Add a whole bunch of extra code quality tools to buildout.

- ``verify_identity`` would be called even if no identity could be
  established. Now skip calling ``verify_identity`` when we already
  have ``NO_IDENTITY``. See issue #175.
